--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="error_handler">Please Enter a title</string>
     <string name="save_location"> Save Location </string>
     <string name="button_addImage"> Add Image </string>
-    <string name="select_location_image">Select location image</string>
+    <string name="select_image">Select location image</string>
     <string name="change_image">Change Image</string>
     <string name="button_location">Set Location</string>
     <string name="title_activity_map">MapActivity</string>
